# rest-power

./: .gitignore  Cargo.toml  Dockerfile  README.md  getversion.py  makedeb_github.sh
.github/workflows/: build.yml
nginx/: nexus-rest-power-upstream.conf  nexus-rest-power.conf
src/: api_version.rs  error_catcher.rs  main.rs  response.rs  settings.rs
src/api/: generic.rs  helper.rs  mod.rs  power.rs  reset.rs  temperature.rs
src/input/json/: empty.rs  fan.rs  info.rs  limits.rs  mod.rs  reset.rs  rpm.rs
systemd/: nexus-rest-power.service
