[package]
name = "nexus-rest-power"
version = "0.9.0"
authors = ["Richard Schleich <rs@noreya.tech>", "Philipp Polzhofer <pp@noreya.tech>"]
edition = "2018"
license = "GPL-3.0-only"

[dependencies]
log = "0.4.8"
pretty_env_logger = "0.4.0"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = { version = "1.0.111" }
serde_json="1.0.53"
nexus_unity_sdbp = { package = "nexus_unity_sdbp", git = "https://github.com/nexus-unity/rustlib-nexus-unity-sdbp.git", version = "0.9.*", features = ["power"] }
#nexus_unity_sdbp = { package = "nexus_unity_sdbp", git = "ssh://git@git.intern.noreya.tech/module-driver/libs/nexus.git", version = "0.9.*", features = ["power"] }
