[package]
name = "nexus-rest-power"
version = "1.0.0"
authors = ["Richard Schleich <rs@noreya.tech>", "Philipp Polzhofer <pp@noreya.tech>"]
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
log = "0.4.8"
rocket = { version = "0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0.111" }
serde_json="1.0.53"
rand = "0.8.5"
sd-notify = "0.4.0"
noreya_sdbp = { package = "noreya_sdbp", git = "https://github.com/noreya-nexus/rustlib-noreya-sdbp.git", version = "1.*.*", features = ["power", "log"] }
